# trivia_2_the_SQL

./: .gitignore  App.js  DEVLOG.md  LICENSE  README.md  db_schema.sql  devplan.html  package-lock.json  package.json  project.html  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
.github/instructions/: css.instructions.md
Data/: combine_in_json.py  converter.py  custom_questions.json  json_to_csv.py  question_stats.py  text2csv.py
Data/format_csv/: animals.csv  brain-teasers.csv  celebrities.csv  entertainment.csv  for-kids.csv  general.csv  geography.csv  history.csv  hobbies.csv  humanities.csv  literature.csv  movies.csv  music.csv  newest.csv  people.csv  rated.csv  religion-faith.csv  science-technology.csv  sports.csv  television.csv  video-games.csv  world.csv
Data/format_json/: animals.json  brain-teasers.json  entertainment.json  for-kids.json  geography.json  hobbies.json  music.json  religion-faith.json  television.json
Data/raw/: movies  world
trivia-2-the-sql/: DEVLOG.md  package-lock.json  package.json
trivia-2-the-sql/src/: App.css  App.js  index.css  variables.css
trivia_2_api/: .old_env  config.py  db.py  main.py  manage.py  requirements.txt
trivia_2_api/middleware/: __init__.py  auth.py
trivia_2_api/models/: __init__.py  auth.py  deck.py  deck_question.py  game.py  host.py  host_deck.py  question.py  question_attribute.py  score.py  team.py  team_member.py  token.py  user.py
trivia_2_api/routers/: auth.py  deck.py  game.py  host.py  question.py  score.py  team.py  user.py
ui/: package-lock.json  package.json
(+114 files in other folders)
